fix windows compatibility